--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,7 @@
 <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
-  
+  {{birth | date:"MM/dd/yy"}}
+
+  {{myname | role:['sundar','gautam']}}
     <label>
       First Name:
       <input type="text" formControlName="firstName" required>
